--- a/globals.css
+++ b/globals.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .mobileNavItem {
-    @apply py-[10px] hover:bg-orange-500 hover:text-white;
+    @apply py-[10px] tracking-wide hover:bg-orange-500 hover:text-white;
   }
 }
 
