--- a/globals.css
+++ b/globals.css
@@ -34,6 +34,10 @@
   display: none;
 }
 
+.blogCategory {
+  @apply cursor-pointer bg-orange-500 px-[10px] py-[5px] text-white;
+}
+
 .label-file-upload {
   height: 100%;
   display: flex;
