--- a/globals.css
+++ b/globals.css
@@ -8,6 +8,17 @@
   }
 }
 
+.userNavBtn {
+  @apply rounded p-2 text-sm transition-all duration-200 hover:bg-orange-500 hover:text-white sm:text-base  lg:text-xl;
+  @apply relative flex items-center justify-evenly gap-2 md:justify-start;
+}
+
+.userNavBtnActive {
+  @apply rounded bg-orange-500 p-2 text-sm text-white transition-all duration-200 sm:text-base  lg:text-xl;
+
+  @apply relative flex items-center justify-evenly gap-2 md:justify-start;
+}
+
 .bar {
   display: block;
   width: 25px;
