--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -30,3 +30,18 @@
 .button_custom {
   @apply flex w-full items-center justify-center gap-2 rounded border border-gray-300 bg-white px-2 py-3 text-lg font-medium shadow-2xl hover:bg-gradient-to-t hover:from-slate-50 hover:to-gray-100;
 }
+
+/* Style for the dropdown scrollbar */
+.selectInput::-webkit-scrollbar {
+  width: 8px;
+}
+
+.selectInput::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+
+/* Style for the dropdown scrollbar when hovered */
+.selectInput::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
